style(Core): Fix text wrapping in multi-select

--- a/src/app/core/multi-select/multi-select.component.sass
+++ b/src/app/core/multi-select/multi-select.component.sass
@@ -19,8 +19,6 @@ button
     color: var(--font-color-default)
     font-family: var(--font-family-default)
     transition: all ease-in-out 200ms
-    text-overflow: ellipsis
-    max-width: 150px
 
   svg
     height: 24px
